Give .string .string the correct spacing

--- a/layout.less
+++ b/layout.less
@@ -104,6 +104,12 @@
 	    word-spacing: normal;
 	    vertical-align: top;
 	}
+
+	.string {
+		letter-spacing: -0.31em; /* webkit */
+		*letter-spacing: normal; /* reset IE < 8 */
+	    word-spacing: -0.43em; /* IE < 8 && gecko */
+	}
 }
 
 .blocks {
